Package: R.matlab
=================

Version: 3.0.2 [2014-06-22]
o Added argument 'workdir' to Matlab$startServer() for setting the
  working directory of MATLAB.  Thanks to Steven Jaffe at Morgan
  Stanley for the suggestion.


Version: 3.0.1 [2014-05-18]
o BUG FIX: Internal uncompressZlib() of readMat() opened several
  raw connections without closing them.  Added system package test.
  Thanks Thilo Klein at University of Cambridge, UK, for the report.


Version: 3.0.0 [2014-05-06]
o MAJOR: readMat() can now read all (zlib) compressed MAT files where it
  previously gave an error message on: "INTERNAL ERROR:  Failed to
  decompress data [...] internal error -3 in memDecompress(2)".


Version: 2.4.0 [2014-04-29]
o BUG FIX: When reading non-UTF-encoded strings (e.g. miUINT32), readMat()
  would drop any characters that were not in the ASCII set (0,32-127).
  This was overly conservative as it should at least have kept 7-bit ASCII
  characters (in 0-127), e.g. newline characters were dropped. This bug
  was introduced in R.matlab v1.2.0 (2008-02-12) when adding support for
  UTF-* strings via iconv().  Now we keep all 8-bit ASCII characters,
  which is also what the Matlab file format documentation suggests are
  used in non-UTF-encoded text matrices.
  Thanks to Steven Pav (San Francisco, CA) for reporting on this.


Version: 2.3.1 [2014-04-26]
o Now package is byte-compiled by default.
o SPEEDUP: MAT5 mxCHAR_CLASS structures are now read slighly faster.


Version: 2.3.0 [2014-02-21]
o ROBUSTNESS: Now the package runs the garbage collector if unloaded
  in order to make sure finalize() is called on any deleted Matlab
  objects.


Version: 2.2.4 [2014-02-17]
o BUG FIX: setOption() for Matlab gave ''Error in UseMethod("setOption") :
  no applicable method for 'setOption' applied to an object of class
  "c('Options', 'Object')"''.  Added a package system test for this.
  Thanks to Griet Laenen at KU Leuven for reporting on this.


Version: 2.2.3 [2014-02-03]