@@ -53,7 +53,7 @@
 \% [3] http://www.mathworks.com/access/helpdesk/help/toolbox/
 \%                                              modelsim/a1057689278b4.html
 \%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%
-disp('Running MatlabServer v2.2.0');
+disp('Running MatlabServer v3.0.2');
 
 \%  addpath R/R_LIBS/linux/library/R.matlab/misc/
 
@@ -163,9 +163,9 @@ fprintf(1, 'done.\n');
 \% Open input and output streams
 
 \% Wait for the client to connect
+fprintf(1, 'Waiting for client to connect (port \%d)...', port);
 clientSocket = accept(server);
-
-fprintf(1, 'Connected to client.\n');
+fprintf(1, 'connected.\n');
 
 \% ...client connected.
 is = java.io.DataInputStream(getInputStream(clientSocket));
@@ -179,6 +179,9 @@ os = java.io.DataOutputStream(getOutputStream(clientSocket));
 \% - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 \% Commands
 commands = {'eval', 'send', 'receive', 'send-remote', 'receive-remote', 'echo'};
+
+lasterr = [];
+variables = [];
 
 \% As long as we receive data, echo that data back to the client.
 state = 0;
@@ -203,7 +206,7 @@ while (state >= 0),
       writeByte(os, 0);
       fprintf(1, 'Sent byte: \%d\n', 0);
       flush(os);
-    catch,
+    catch
       fprintf(1, 'EvaluationException: \%s\n', lasterr);
       writeByte(os, -1);
       fprintf(1, 'Sent byte: \%d\n', -1);
@@ -225,6 +228,7 @@ while (state >= 0),
       variable = variables{k};
       if (exist(variable) ~= 1)
         lasterr = sprintf('Variable ''\%s'' not found.', variable);
+        disp(lasterr);
         ok = 0;
         break;
       end;
@@ -256,6 +260,7 @@ while (state >= 0),
       variable = variables{k};
       if (exist(variable) ~= 1)
         lasterr = sprintf('Variable ''\%s'' not found.', variable);
+        disp(lasterr);
         ok = 0;
         break;
       end;
@@ -362,6 +367,10 @@ close(server);
 
 \%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%\%
 \% HISTORY:
+\% 2014-06-23 [v3.0.2]
+\% o ROBUSTNESS: Variables 'lasterr' and 'variables' are now always
+\%   defined. Potential bug spotted by Steven Jaffe at Morgan Stanley.
+\% o Added more progress/verbose output.
 \% 2014-01-21 [v2.2.0]
 \% o BUG FIX: The MatlabServer.m script would incorrectly consider
 \%   Matlab v8 and above as Matlab v6.  Thanks to Frank Stephen at NREL
